# events

./: .env.example  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
src/: urls.py
src/authz/: apps.py  serializers.py  urls.py  views.py
src/core/: __init__.py  asgi.py  celery.py  settings.py  wsgi.py
src/events/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
src/events/migrations/: 0001_initial.py  0002_outbox_alter_eventregistration_id.py
src/events/utils/: notifications.py
src/sync/: apps.py  models.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
